@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    #73, if Haskell can't write a unicode filename, skip the test
     Print out the entire database in diagnostics mode
     Rewrite database writes, old code could break metadata on error
     #25, optimise building with Ninja
